k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sysinfo
  labels:
    app: sysinfo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sysinfo
  template:
    metadata:
      labels:
        app: sysinfo
    spec:
      nodeSelector:
        chaos/node-label: main
      containers:
      - name: sysinfo
        image: 890769921003.dkr.ecr.eu-west-1.amazonaws.com/pcyman-app:0.1.1
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
