k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sysinfo
spec:
  selector:
    app: sysinfo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
